Added license. Added gear icon. Fixed the copyrights
Started moving away from the sample and changing into the next version
of InTheBoks.

--- a/InTheBoks.Resources/InTheBoks.Resources.csproj
+++ b/InTheBoks.Resources/InTheBoks.Resources.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Text.NO.Designer.cs">
       <DependentUpon>Text.NO.resx</DependentUpon>
       <AutoGen>True</AutoGen>
