--- a/InTheBoks.Web.Tests/InTheBoks.Web.Tests.csproj
+++ b/InTheBoks.Web.Tests/InTheBoks.Web.Tests.csproj
@@ -98,6 +98,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
