Database creation fixed
In this release, the database "InTheBoks" is created on the SQLEXPRESS
instance.
Added Autofac for future addition of IoC pattern.
Added NLog for logging, storing the logs into the database.
Added support for HTML 5 slider (range selector) to change thumbnail
size.

--- a/InTheBoks.Web.Tests/packages.config
+++ b/InTheBoks.Web.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="2.6.2.859" />
+  <package id="Autofac.Mvc4" version="2.6.2.859" />
+  <package id="Autofac.WebApi" version="2.6.2.859" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20505.0" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20505.0" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20505.0" />
@@ -9,4 +12,5 @@
   <package id="Microsoft.Net.Http" version="2.0.20505.0" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Newtonsoft.Json" version="4.5.7" />
+  <package id="NLog" version="2.0.0.2000" />
 </packages>
