--- a/InTheBoks.Web/Web.config
+++ b/InTheBoks.Web/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
   </configSections>
   <system.diagnostics>
     <trace>
@@ -20,6 +21,7 @@
   </system.diagnostics>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-InTheBoks.Web-20120611215954;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-InTheBoks.Web-20120611215954.mdf" />
+    <add name="InTheBoks" providerName="System.Data.SqlClient" connectionString="Server=(local)\sqlexpress;Database=InTheBoks;Trusted_Connection=True;Encrypt=False;" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -29,11 +31,37 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
+  <nlog autoReload="true">
+    <targets>
+      <target type="Database" name="database" connectionStringName="InTheBoks" dbProvider="System.Data.SqlClient">
+        <commandText>
+          insert into Logs(Timestamp,Level,Logger,Message,MachineName,ThreadId, Exception, Stacktrace) values(@Timestamp, @Level, @Logger, @Message, @MachineName, @ThreadId, @Exception, @Stacktrace);
+        </commandText>
+        <parameter name="@Timestamp" layout="${longdate}"/>
+        <parameter name="@Level" layout="${level}"/>
+        <parameter name="@Logger" layout="${logger}"/>
+        <parameter name="@Message" layout="${message}"/>
+        <parameter name="@MachineName" layout="${machinename}"/>
+        <parameter name="@ThreadId" layout="${threadid}"/>
+        <parameter name="@Exception" layout="${exception}"/>
+        <parameter name="@Stacktrace" layout="${stacktrace}"/>
+      </target>
+      <target name="console" type="Console" layout="${longdate} ${callsite} ${level} ${message}"/>
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" appendTo="database,console"/>
+    </rules>
+  </nlog>
+  
   <system.web>
+    <customErrors mode="Off" />
     <globalization uiCulture="auto" culture="auto" />
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <!--
+      Do we need this?
+      <forms loginUrl="~/Account/Login" timeout="2880" />-->
     </authentication>
     <pages>
       <namespaces>
