--- a/InTheBoks.Web/packages.config
+++ b/InTheBoks.Web/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="2.6.2.859" />
+  <package id="Autofac.Mvc4" version="2.6.2.859" />
+  <package id="Autofac.WebApi" version="2.6.2.859" />
   <package id="EntityFramework" version="5.0.0-rc" />
   <package id="Facebook" version="6.0.20" />
   <package id="jQuery" version="1.7.2" />
@@ -23,6 +26,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" />
   <package id="Modernizr" version="2.5.3" />
   <package id="Newtonsoft.Json" version="4.5.7" />
+  <package id="NLog" version="2.0.0.2000" />
   <package id="WebGrease" version="1.0.0" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" />
 </packages>
