--- a/InTheBoks/packages.config
+++ b/InTheBoks/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="2.6.2.859" />
+  <package id="Autofac.Mvc4" version="2.6.2.859" />
+  <package id="Autofac.WebApi" version="2.6.2.859" />
   <package id="EntityFramework" version="5.0.0-rc" />
   <package id="Facebook" version="6.0.20" />
+  <package id="NLog" version="2.0.0.2000" />
 </packages>
