--- a/InTheBoks.Services/InTheBoks.Services.csproj
+++ b/InTheBoks.Services/InTheBoks.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3ED5AEB2-A6E4-4222-B889-B0ED812A671C}</ProjectGuid>
+    <ProjectGuid>{9A17F2EF-DF81-4FAF-B61C-8763104FC7B7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InTheBoks</RootNamespace>
-    <AssemblyName>InTheBoks</AssemblyName>
+    <RootNamespace>InTheBoks.Services</RootNamespace>
+    <AssemblyName>InTheBoks.Services</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,32 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac">
-      <HintPath>..\packages\Autofac.2.6.2.859\lib\NET40\Autofac.dll</HintPath>
-    </Reference>
-    <Reference Include="Autofac.Configuration">
-      <HintPath>..\packages\Autofac.2.6.2.859\lib\NET40\Autofac.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="Autofac.Integration.Mvc">
-      <HintPath>..\packages\Autofac.Mvc4.2.6.2.859\lib\NET40\Autofac.Integration.Mvc.dll</HintPath>
-    </Reference>
-    <Reference Include="Autofac.Integration.WebApi">
-      <HintPath>..\packages\Autofac.WebApi.2.6.2.859\lib\NET40\Autofac.Integration.WebApi.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.5.0.0-rc\lib\net40\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="Facebook">
-      <HintPath>..\packages\Facebook.6.0.20\lib\net40-client\Facebook.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog">
-      <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
+    <Reference Include="SprightlySoftAWS">
+      <HintPath>..\..\..\..\Downloads\FrontGatesDev.AmazonSample\SprightlySoftAWS.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -67,26 +48,17 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="Data\DataContext.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Models\Catalog.cs" />
-    <Compile Include="Models\Item.cs" />
-    <Compile Include="Models\Log.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="IItemService.cs" />
+    <Compile Include="ItemService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryString.cs" />
-    <Compile Include="Security\FacebookIdentity.cs" />
-    <Compile Include="Security\FacebookPrincipal.cs" />
+    <Compile Include="SignedRequestHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\InTheBoks.Resources\InTheBoks.Resources.csproj">
-      <Project>{b6422df5-9540-449f-900e-8f0808c4e318}</Project>
-      <Name>InTheBoks.Resources</Name>
+    <ProjectReference Include="..\InTheBoks\InTheBoks.csproj">
+      <Project>{3ed5aeb2-a6e4-4222-b889-b0ed812a671c}</Project>
+      <Name>InTheBoks</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
