--- a/InTheBoks.Web/Web.config
+++ b/InTheBoks.Web/Web.config
@@ -30,6 +30,9 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="AWSAccessKeyId" value="" />
+    <add key="AWSSecretAccessKey" value="" />
+    <add key="AWSAID" value="intheboks-20" />
   </appSettings>
 
   <nlog autoReload="true">
