--- a/InTheBoks.Web/Web.config
+++ b/InTheBoks.Web/Web.config
@@ -7,13 +7,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <system.diagnostics>
     <trace>
       <listeners>
-        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-          name="AzureDiagnostics">
+        <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
           <filter type="" />
         </add>
       </listeners>
@@ -34,29 +33,27 @@
     <add key="AWSSecretAccessKey" value="" />
     <add key="AWSAID" value="intheboks-20" />
   </appSettings>
-
   <nlog autoReload="true">
     <targets>
       <target type="Database" name="database" connectionStringName="InTheBoks" dbProvider="System.Data.SqlClient">
         <commandText>
           insert into Logs(Timestamp,Level,Logger,Message,MachineName,ThreadId, Exception, Stacktrace) values(@Timestamp, @Level, @Logger, @Message, @MachineName, @ThreadId, @Exception, @Stacktrace);
         </commandText>
-        <parameter name="@Timestamp" layout="${longdate}"/>
-        <parameter name="@Level" layout="${level}"/>
-        <parameter name="@Logger" layout="${logger}"/>
-        <parameter name="@Message" layout="${message}"/>
-        <parameter name="@MachineName" layout="${machinename}"/>
-        <parameter name="@ThreadId" layout="${threadid}"/>
-        <parameter name="@Exception" layout="${exception}"/>
-        <parameter name="@Stacktrace" layout="${stacktrace}"/>
+        <parameter name="@Timestamp" layout="${longdate:universalTime:true}" />
+        <parameter name="@Level" layout="${level}" />
+        <parameter name="@Logger" layout="${logger}" />
+        <parameter name="@Message" layout="${message}" />
+        <parameter name="@MachineName" layout="${machinename}" />
+        <parameter name="@ThreadId" layout="${threadid}" />
+        <parameter name="@Exception" layout="${exception}" />
+        <parameter name="@Stacktrace" layout="${stacktrace}" />
       </target>
-      <target name="console" type="Console" layout="${longdate} ${callsite} ${level} ${message}"/>
+      <target name="console" type="Console" layout="${longdate} ${callsite} ${level} ${message}" />
     </targets>
     <rules>
-      <logger name="*" minlevel="Debug" appendTo="database,console"/>
+      <logger name="*" minlevel="Debug" appendTo="database,console" />
     </rules>
   </nlog>
-  
   <system.web>
     <customErrors mode="Off" />
     <globalization uiCulture="auto" culture="auto" />
@@ -115,6 +112,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.6.3.862" newVersion="2.6.3.862" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
