--- a/InTheBoks/InTheBoks.csproj
+++ b/InTheBoks/InTheBoks.csproj
@@ -30,11 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac">
-      <HintPath>..\packages\Autofac.2.6.2.859\lib\NET40\Autofac.dll</HintPath>
+    <Reference Include="Autofac, Version=2.6.3.862, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Autofac.2.6.3.862\lib\NET40\Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="Autofac.Configuration">
-      <HintPath>..\packages\Autofac.2.6.2.859\lib\NET40\Autofac.Configuration.dll</HintPath>
+    <Reference Include="Autofac.Configuration, Version=2.6.3.862, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Autofac.2.6.3.862\lib\NET40\Autofac.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="Autofac.Integration.Mvc">
       <HintPath>..\packages\Autofac.Mvc4.2.6.2.859\lib\NET40\Autofac.Integration.Mvc.dll</HintPath>
@@ -57,6 +59,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,16 +72,45 @@
       <Link>SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="AppConfig.cs" />
+    <Compile Include="Commands\Catalog\CreateOrUpdateCatalogCommand.cs" />
+    <Compile Include="Commands\Catalog\DeleteCatalogCommand.cs" />
+    <Compile Include="Command\CommandHandlerNotFoundException.cs" />
+    <Compile Include="Command\CommandResult.cs" />
+    <Compile Include="Command\CommandResults.cs" />
+    <Compile Include="Command\ICommand.cs" />
+    <Compile Include="Command\ICommandHandler.cs" />
+    <Compile Include="Command\ICommandResult.cs" />
+    <Compile Include="Command\ICommandResults.cs" />
+    <Compile Include="Command\IValidationHandler.cs" />
+    <Compile Include="Command\ValidationHandlerNotFoundException.cs" />
     <Compile Include="Data\DataContext.cs" />
+    <Compile Include="Data\Repositories\CatalogRepository.cs" />
+    <Compile Include="Data\Repositories\JobRepository.cs" />
+    <Compile Include="Data\Repositories\LogRepository.cs" />
+    <Compile Include="Data\Repositories\ItemRepository.cs" />
+    <Compile Include="Data\Repositories\UserRepository.cs" />
+    <Compile Include="Dispatcher\DefaultCommandBus.cs" />
+    <Compile Include="Dispatcher\ICommandBus.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Data\Infrastructure\DatabaseFactory.cs" />
+    <Compile Include="Data\Infrastructure\Disposable.cs" />
+    <Compile Include="Data\Infrastructure\IDatabaseFactory.cs" />
+    <Compile Include="Data\Infrastructure\IRepository.cs" />
+    <Compile Include="Data\Infrastructure\IUnitOfWork.cs" />
+    <Compile Include="Data\Infrastructure\PagedResult.cs" />
+    <Compile Include="Data\Infrastructure\RepositoryBase.cs" />
+    <Compile Include="Data\Infrastructure\UnitOfWork.cs" />
+    <Compile Include="JobManager.cs" />
     <Compile Include="Models\Catalog.cs" />
     <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Job.cs" />
     <Compile Include="Models\Log.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryString.cs" />
     <Compile Include="Security\FacebookIdentity.cs" />
     <Compile Include="Security\FacebookPrincipal.cs" />
+    <Compile Include="ValidationResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InTheBoks.Resources\InTheBoks.Resources.csproj">
@@ -86,8 +119,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands\Item\" />
+    <Folder Include="Commands\User\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
