--- a/InTheBoks/packages.config
+++ b/InTheBoks/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="2.6.2.859" />
+  <package id="Autofac" version="2.6.3.862" targetFramework="net40" />
   <package id="Autofac.Mvc4" version="2.6.2.859" />
   <package id="Autofac.WebApi" version="2.6.2.859" />
   <package id="EntityFramework" version="5.0.0-rc" />
