--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\InTheBoks.Web.Tests\packages.config" />
   <repository path="..\InTheBoks.Web\packages.config" />
+  <repository path="..\InTheBoks.Worker\packages.config" />
   <repository path="..\InTheBoks\packages.config" />
 </repositories>
