--- a/InTheBoks.Web/packages.config
+++ b/InTheBoks.Web/packages.config
@@ -23,7 +23,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20505.0" />
   <package id="Microsoft.Net.Http" version="2.0.20505.0" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.1" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" />
   <package id="Newtonsoft.Json" version="4.5.7" />
   <package id="NLog" version="2.0.0.2000" />
