--- a/InTheBoks.Worker/InTheBoks.Worker.csproj
+++ b/InTheBoks.Worker/InTheBoks.Worker.csproj
@@ -40,6 +40,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Autofac.2.6.3.862\lib\NET40\Autofac.Configuration.dll</HintPath>
     </Reference>
+    <Reference Include="Facebook, Version=6.0.10.0, Culture=neutral, PublicKeyToken=58cb4f2111d1e6de, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Facebook.6.0.20\lib\net40-client\Facebook.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.1.7.0.1\lib\net35-full\Microsoft.WindowsAzure.Configuration.dll</HintPath>
     </Reference>
@@ -61,12 +65,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bootstrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerRole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InTheBoks.Resources\InTheBoks.Resources.csproj">
+      <Project>{b6422df5-9540-449f-900e-8f0808c4e318}</Project>
+      <Name>InTheBoks.Resources</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InTheBoks.Services\InTheBoks.Services.csproj">
+      <Project>{9a17f2ef-df81-4faf-b61c-8763104fc7b7}</Project>
+      <Name>InTheBoks.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InTheBoks\InTheBoks.csproj">
+      <Project>{3ed5aeb2-a6e4-4222-b889-b0ed812a671c}</Project>
+      <Name>InTheBoks</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
