Added ignore for database files.

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,10 @@ local.properties
 *.dotCover
 *.pubxml
 
+# Ignore the database files
+*.mdf
+*.ldf
+
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
 #packages/
 
