--- a/InTheBoks/InTheBoks.csproj
+++ b/InTheBoks/InTheBoks.csproj
@@ -98,6 +98,7 @@
     <Compile Include="AppConfig.cs" />
     <Compile Include="Commands\Catalog\CreateOrUpdateCatalogCommand.cs" />
     <Compile Include="Commands\Catalog\DeleteCatalogCommand.cs" />
+    <Compile Include="Commands\Item\CreateOrUpdateItemCommand.cs" />
     <Compile Include="Command\CommandHandlerNotFoundException.cs" />
     <Compile Include="Command\CommandResult.cs" />
     <Compile Include="Command\CommandResults.cs" />
@@ -128,6 +129,7 @@
     <Compile Include="Dispatcher\ICommandBus.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Exceptions.cs" />
+    <Compile Include="Handlers\Item\CreateOrUpdateItemHandler.cs" />
     <Compile Include="JobManager.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Catalog.cs" />
@@ -145,7 +147,6 @@
     <Compile Include="Web\UnhandledExceptionFilter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Commands\Item\" />
     <Folder Include="Commands\User\" />
   </ItemGroup>
   <ItemGroup>
