--- a/InTheBoks.Web/Web.config
+++ b/InTheBoks.Web/Web.config
@@ -58,6 +58,7 @@
     </rules>
   </nlog>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0" />
     <globalization uiCulture="auto" culture="auto" />
     <authentication mode="Forms">
