--- a/InTheBoks.Web/InTheBoks.Web.csproj
+++ b/InTheBoks.Web/InTheBoks.Web.csproj
@@ -61,7 +61,9 @@
       <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.1.7.0.3\lib\net35-full\Microsoft.WindowsAzure.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Diagnostics, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-    <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\WindowsAzure.Storage.1.7.0.0\lib\net35-full\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
     </Reference>
@@ -191,9 +193,11 @@
     <Content Include="Content\bg.png" />
     <Content Include="Content\button_bg.png" />
     <Content Include="Content\button_bg_2.png" />
+    <Content Include="Content\donate.gif" />
     <Content Include="Content\drop_box256x256.png" />
     <Content Include="Content\Facebook.png" />
     <Content Include="Content\friend.jpg" />
+    <Content Include="Content\frontpage_background.png" />
     <Content Include="Content\gear.png" />
     <Content Include="Content\icons\black\add.png" />
     <Content Include="Content\icons\black\back.png" />
@@ -272,6 +276,7 @@
     <Content Include="Content\intheboks_128.png" />
     <Content Include="Content\intheboks_57.png" />
     <Content Include="Content\intheboks_72.png" />
+    <Content Include="Content\intheboks_banner.png" />
     <Content Include="Content\intheboks_ios.png" />
     <Content Include="Content\intheboks_logo.png" />
     <Content Include="Content\intheboks_logo_light.png" />
@@ -334,9 +339,11 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\ui-darkness\jquery-ui.css" />
+    <Content Include="Content\transformers_cover.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\app\app.js" />
     <Content Include="Scripts\app\fb.js" />
