Added catalog creation
Did some security improvements to the HTTP headers.
Added support for creating catalogs.

--- a/InTheBoks.Web/InTheBoks.Web.csproj
+++ b/InTheBoks.Web/InTheBoks.Web.csproj
@@ -341,6 +341,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\ui-darkness\jquery-ui.css" />
     <Content Include="Content\transformers_cover.png" />
+    <Content Include="crossdomain.xml" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
