--- a/InTheBoks.Web/Web.config
+++ b/InTheBoks.Web/Web.config
@@ -58,6 +58,9 @@
     </rules>
   </nlog>
   <system.web>
+    
+    <httpRuntime enableVersionHeader="false" />
+    
     <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0" />
     <globalization uiCulture="auto" culture="auto" />
@@ -107,7 +110,22 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+
+    <httpProtocol>
+      <customHeaders> <!-- Should we clear first? -->
+        <add name="X-UA-Compatible" value="IE=edge" />
+        <add name="X-Frame-Options" value="DENY" />
+        <add name="X-Content-Type-Options" value="nosniff" />
+      </customHeaders>
+      
+    </httpProtocol>
+
+    
+    
   </system.webServer>
+
+  
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
