Added support for catalog delete
Extended the command result interface to support giving back the ID of
the newly created object.

--- a/InTheBoks/InTheBoks.csproj
+++ b/InTheBoks/InTheBoks.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Exceptions.cs" />
     <Compile Include="Handlers\Activity\ActivityHandler.cs" />
     <Compile Include="Handlers\Catalog\CreateOrUpdateCatalogHandler.cs" />
+    <Compile Include="Handlers\Catalog\DeleteCatalogHandler.cs" />
     <Compile Include="Handlers\Item\DeleteItemHandler.cs" />
     <Compile Include="Handlers\Item\ItemsModifiedHandler.cs" />
     <Compile Include="Handlers\Item\CreateOrUpdateItemHandler.cs" />
