Added the activity stream
Loads and displays activity stream for all users at the moment, no
filtering.
Added Created and Modified dates to the domain models.
Improved the scrolling on "Learn more" on the splash screen.
Added output of all available timezones, binding in settings does not
work.
Upgraded Modernizr and JSON.NET.

--- a/InTheBoks.Web/Web.config
+++ b/InTheBoks.Web/Web.config
@@ -23,6 +23,8 @@
     
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-InTheBoks.Web-20120818021127;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-InTheBoks.Web-20120818021127.mdf" />-->
 
+    <add name="InTheBoks" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=InTheBoks;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\InTheBoks.mdf" />
+
     <!-- Uncomment to use SQLExpress, uses LocalDb by default. -->
     <!--<add name="InTheBoks" providerName="System.Data.SqlClient" connectionString="Server=(local)\sqlexpress;Database=InTheBoks;Trusted_Connection=True;Encrypt=False;" />-->
   </connectionStrings>
@@ -48,7 +50,7 @@
         <parameter name="@Message" layout="${message}" />
         <parameter name="@MachineName" layout="${machinename}" />
         <parameter name="@ThreadId" layout="${threadid}" />
-        <parameter name="@Exception" layout="${exception}" />
+        <parameter name="@Exception" layout="${exception:format=ToString,StackTrace}" />
         <parameter name="@Stacktrace" layout="${stacktrace}" />
       </target>
       <target name="console" type="Console" layout="${longdate} ${callsite} ${level} ${message}" />
