--- a/InTheBoks.Web/packages.config
+++ b/InTheBoks.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="jQuery" version="1.8.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.23" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
+  <package id="Knockout.Mapping" version="2.3.2" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net40" />
@@ -21,8 +22,8 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.3" targetFramework="net40" />
-  <package id="Modernizr" version="2.5.3" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.8" targetFramework="net40" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net40" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net40" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
