--- a/InTheBoks.Web/Web.config
+++ b/InTheBoks.Web/Web.config
@@ -104,6 +104,7 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
+    
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
@@ -111,10 +112,14 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      
+      <!-- Does NOT work with Chrome :-( -->
+      <!--<add name="AppCacheHandler" verb="*" path="*.appcache" type="InTheBoks.Web.AppCacheHandler, InTheBoks" resourceType="Unspecified" preCondition="integratedMode"/>-->
     </handlers>
 
     <httpProtocol>
-      <customHeaders> <!-- Should we clear first? -->
+      <customHeaders>
+        <remove name="X-Powered-By" />
         <add name="X-UA-Compatible" value="IE=edge" />
         <add name="X-Frame-Options" value="DENY" />
         <add name="X-Content-Type-Options" value="nosniff" />
@@ -122,11 +127,12 @@
       
     </httpProtocol>
 
-    
-    
-  </system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".appcache" mimeType="text/cache-manifest" />
+    </staticContent>
 
-  
+
+  </system.webServer>
 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
